--- a/src/styles/quasar.sass
+++ b/src/styles/quasar.sass
@@ -1,6 +1,6 @@
 @import './quasar.variables.sass'
-//@import '~quasar-styl'
-// @import '~quasar-addon-styl'
+@import '~quasar-styl'
+@import '~quasar-addon-styl'
 
 .layout
   display: flex
@@ -58,3 +58,19 @@
   position: fixed
   top: 0
   left: 0
+.text
+  &-my-bold
+    font-family: 'Lato', sans-serif
+    font-style: normal
+    font-weight: 700
+    font-size: 1em
+    line-height: 22px
+    letter-spacing: 0.01em
+  &-my-lightgray
+    font-family: 'Lato', sans-serif
+    font-style: normal
+    font-weight: 400
+    font-size: 0.8em
+    line-height: 14px
+    letter-spacing: 0.01em
+    color: #7D7D7D
