Task 8 | Modal publication rework

--- a/src/styles/quasar.sass
+++ b/src/styles/quasar.sass
@@ -35,7 +35,7 @@
       color: #FFFFFF
       background: $green
   &__exit
-    position: absolute
+    position: fixed
     bottom: 72px
     width: 200px
     border: 1px solid transparent
