--- a/src/styles/quasar.sass
+++ b/src/styles/quasar.sass
@@ -1,7 +1,8 @@
 @import './quasar.variables.sass'
 @import '~quasar-styl'
 @import '~quasar-addon-styl'
-
+body, html
+  height: 100vh
 .layout
   display: flex
   flex-direction: row
@@ -76,3 +77,50 @@
     line-height: 14px
     letter-spacing: 0.01em
     color: #7D7D7D
+
+.form
+  font-style: normal
+  font-family: Inter, sans-serif
+  line-height: normal
+  &__header
+    color: #404040
+    font-size: 37px
+    font-weight: 600
+    letter-spacing: 0.37px
+  &__subheader
+    color: #7D7D7D
+    text-align: center
+    font-size: 17px
+    font-weight: 400
+    line-height: 30px
+    &_link
+      font-size: 17px
+      color: #7D7D7D
+      overflow: hidden
+      text-decoration: none
+      font-weight: 600
+  &__label
+    color: #344054
+    font-size: 14px
+    font-weight: 500
+    line-height: 20px
+  &__input
+    border-radius: 30px
+    border: none
+    outline: none
+    padding: 12px 16px
+    background: #FFF
+    box-shadow: 0 10px 30px 0 rgba(0, 0, 0, 0.10)
+  &__button
+    button
+      border: none
+      border-radius: 34px
+      background: #404040
+      box-shadow: 0 10px 30px 0 rgba(0, 0, 0, 0.10)
+      padding: 13px 56px
+      color: #FFF
+      font-size: 17px
+      font-weight: 600
+      &:hover
+        background: #2f2f2f
+        cursor: pointer
