--- a/src/styles/quasar.sass
+++ b/src/styles/quasar.sass
@@ -124,3 +124,10 @@ body, html
       &:hover
         background: #2f2f2f
         cursor: pointer
+.login-page
+  background-image: url("@/assets/images/auth_background.svg")
+  background-size: cover
+  display: flex
+  justify-content: center
+  align-items: center
+  height: 100%
