--- a/src/styles/quasar.sass
+++ b/src/styles/quasar.sass
@@ -87,23 +87,31 @@ body, html
     font-size: 37px
     font-weight: 600
     letter-spacing: 0.37px
+    @media (max-width: 576px)
+      font-size: 24px
   &__subheader
     color: #7D7D7D
     text-align: center
     font-size: 17px
     font-weight: 400
     line-height: 30px
+    @media (max-width: 576px)
+      font-size: 12px
     &_link
       font-size: 17px
       color: #7D7D7D
       overflow: hidden
       text-decoration: none
       font-weight: 600
+      @media (max-width: 576px)
+        font-size: 12px
   &__label
     color: #344054
     font-size: 14px
     font-weight: 500
     line-height: 20px
+    @media (max-width: 576px)
+      font-size: 10px
   &__input
     border-radius: 30px
     border: none
@@ -111,7 +119,11 @@ body, html
     padding: 12px 16px
     background: #FFF
     box-shadow: 0 10px 30px 0 rgba(0, 0, 0, 0.10)
+    @media (max-width: 576px)
+      font-size: 12px
   &__button
+    @media (max-width: 576px)
+      width: 100%
     button
       border: none
       border-radius: 34px
@@ -121,6 +133,9 @@ body, html
       color: #FFF
       font-size: 17px
       font-weight: 600
+      @media (max-width: 576px)
+        font-size: 12px
+        width: fill-available
       &:hover
         background: #2f2f2f
         cursor: pointer
